- divided project into modules - lazy loading added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<!--<router-outlet></router-outlet>-->
-<app-pokemon-list></app-pokemon-list>
+<button routerLink="pokemons"></button>
+
+<router-outlet></router-outlet>
+
+
