modules fixed, routing almost done

--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button color="primary">Kliknij w pikaczu</button>
+<!--<button mat-raised-button color="primary">Kliknij w pikaczu</button>-->
 
 <mat-card></mat-card>
 
