--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -1,5 +1,9 @@
 <!--<button mat-raised-button color="primary">Kliknij w pikaczu</button>-->
 
-<mat-card></mat-card>
+<ng-container *ngIf="(list$ | async)">
+  <mat-card class="card" *ngFor="let item of (list$ | async)">
+    <div (click)="navigateToDetails(item?.id)">{{ item?.name }}</div>
+  </mat-card>
+</ng-container>
 
 <pre>{{pokemon$ | async | json}}</pre>
