--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -1,9 +1,20 @@
-<!--<button mat-raised-button color="primary">Kliknij w pikaczu</button>-->
+<mat-table [dataSource]="(list$ | async)">
 
-<ng-container *ngIf="(list$ | async)">
-  <mat-card class="card" *ngFor="let item of (list$ | async)">
-    <div (click)="navigateToDetails(item?.id)">{{ item?.name }}</div>
-  </mat-card>
-</ng-container>
+  <ng-container matColumnDef="number">
+    <mat-header-cell *matHeaderCellDef> Number</mat-header-cell>
+    <mat-cell *matCellDef="let pokemon"> {{ (list$ | async)?.indexOf(pokemon) + 1 }}</mat-cell>
+  </ng-container>
 
-<pre>{{pokemon$ | async | json}}</pre>
+  <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderCellDef> Name</mat-header-cell>
+    <mat-cell *matCellDef="let pokemon"> {{pokemon.name}}</mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns" (click)="onRowClicked(row)"></mat-row>
+
+</mat-table>
+
+
+
+
