--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
+<mat-toolbar color="primary" class="app-list-toolbar">
+  <span>{{ toolBarContent$ | async }}</span>
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+</mat-toolbar>
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>Item 1</button>
+  <button mat-menu-item>Item 2</button>
+</mat-menu>
+
 <button routerLink="pokemons">Pokemons</button>
 <button routerLink="beers">Beers</button>
 
