--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,13 @@
 </mat-toolbar>
 
 <mat-menu #menu="matMenu">
-  <button mat-menu-item>Item 1</button>
-  <button mat-menu-item>Item 2</button>
+  <button mat-button routerLink="pokemons">Pokemons</button>
+  <button mat-button routerLink="beers">Beers</button>
+
 </mat-menu>
 
-<button routerLink="pokemons">Pokemons</button>
-<button routerLink="beers">Beers</button>
+<!--<button mat-button routerLink="pokemons">Pokemons</button>-->
+<!--<button mat-button routerLink="beers">Beers</button>-->
 
 <router-outlet></router-outlet>
 
