- beer details spinner added

--- a/src/app/pokemon/pokemon-details/pokemon-details.component.html
+++ b/src/app/pokemon/pokemon-details/pokemon-details.component.html
@@ -1,4 +1,4 @@
 <pre>{{details$ | async | json}}</pre>
 
 
-<mat-spinner *ngIf="loader$ | async"></mat-spinner>
+<mat-spinner *ngIf="loader$ | async" [diameter]="80" [strokeWidth]="10"></mat-spinner>
