--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -1,10 +1,10 @@
 
 
-<form class="example-form pokemon-form">
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Search pokemon">
-  </mat-form-field>
-</form>
+<!--<form class="example-form pokemon-form">-->
+  <!--<mat-form-field class="example-full-width">-->
+    <!--<input matInput placeholder="Search pokemon">-->
+  <!--</mat-form-field>-->
+<!--</form>-->
 
 <mat-table [dataSource]="(list$ | async)">
 
