- beer list continued

--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -20,7 +20,7 @@
   Only letters allowed!
 </div>
 <div *ngIf="form.get('search').errors?.required && form.touched">
-  You have to write sth!
+  Please enter a pokemon!
 </div>
 
 
